# contextforge-mcp-gateway

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
cognitive_server/: Dockerfile  pyproject.toml  server.py
cognitive_server/db/: connection.py  schema.sql
cognitive_server/ecef/: constructor.py  equilibrium.py  evaluator.py  models.py
cognitive_server/ingest/: interaction_logger.py  models.py
cognitive_server/patterns/: extractor.py  frequency.py  sequential.py
cognitive_server/tools/: profile.py  suggest.py
demo/: agent.py
gateway/: Dockerfile  pyproject.toml
gateway/config/: routes.yaml
gateway/gateway/: config.py  health.py  main.py
gateway/gateway/auth/: jwt_validator.py  scope_checker.py  token_exchange.py
gateway/gateway/middleware/: audit_log.py  request_id.py
gateway/gateway/routing/: path_router.py  proxy.py  tool_aggregator.py
keycloak/: Dockerfile  realm-export.json
orchestrator/: Dockerfile  pyproject.toml  pyrightconfig.json
orchestrator/orchestrator/: main.py
orchestrator/orchestrator/config/: plan_templates.yaml
orchestrator/orchestrator/executor/: gateway_client.py  models.py  plan_executor.py
orchestrator/orchestrator/parser/: models.py  thesis_parser.py
orchestrator/orchestrator/planner/: models.py  plan_generator.py  plan_templates.py
orchestrator/orchestrator/synthesiser/: evidence_scorer.py  models.py  report_generator.py  risk_assessor.py
servers/bloomberg/: Dockerfile  data.py  pyproject.toml  server.py  tools.py
servers/research/: Dockerfile  documents.py  pyproject.toml  server.py  tools.py
servers/risk/: Dockerfile  engine.py  pyproject.toml  server.py  tools.py
servers/shared/: auth.py  isolation.py  models.py
tests/e2e/: conftest.py  test_auth_flow.py  test_health.py  test_pm_isolation.py  test_token_exchange.py  test_tool_aggregation.py
tests/unit/: test_path_router.py  test_scope_checker.py
