[project]
name = "contextforge-cognitive-mcp"
version = "1.0.0"
description = "Cognitive MCP server — ECEF-based PM interaction pattern analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.4.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
