[project]
name = "contextforge-thesis-orchestrator"
version = "1.0.0"
description = "Investment Thesis Validation Orchestrator"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.4.0",
    "pyjwt[crypto]>=2.10.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
